Fixes admin search box spacing and jQuery view toggle spacing in FF, Chrome.
--HG--
branch : 1.x

--- a/src/Orchard.Web/Modules/Orchard.Modules/styles/orchard-modules-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.Modules/styles/orchard-modules-admin.css
@@ -161,9 +161,8 @@ h2.recentlyInstalledModule {padding:0 0 0 40px;}
 .updateAvailable {background-color: #f1f0cb;}
 .search-actions {
     float: right;
-    display: inline;
     height: auto;
-    margin: 0 1.4em 0 0;
+    margin: 0 0 16px 0;
     padding-top: 0;
 }
 .manage {
